# Software-Copyright-Material-Generation-Skills-for-Codex

./: .gitignore  LICENSE  README.md  pyproject.toml  review.txt  softcopy_codex_skill_pack_spec.md  softcopy_support.py  todo.md
.agents/: AGENTS.md
.agents/skills/softcopy-application/: SKILL.md
.agents/skills/softcopy-code-doc/: SKILL.md
.agents/skills/softcopy-feature-map/: SKILL.md
.agents/skills/softcopy-intake/: SKILL.md
.agents/skills/softcopy-manual/: SKILL.md
.agents/skills/softcopy-proof-check/: SKILL.md
.agents/skills/softcopy-scan-repo/: SKILL.md
.agents/skills/softcopy-validate/: SKILL.md
docs/: project_facts_guide.md
evals/artifacts/: application_draft_cases.yaml  validation_cases.yaml
evals/contracts/: required_facts_cases.yaml  traceability_cases.yaml
evals/trigger/: negative_cases.yaml  positive_cases.yaml
examples/minimal-project/: README.md
examples/minimal-project/docs/: feature_map.approved.example.yaml  manual_manifest.approved.example.yaml  ownership_evidence.approved.example.yaml  (+1 more)
softcopy/: feature_map.yaml  manual_manifest.yaml  ownership_evidence.yaml  project_facts.yaml
softcopy/contracts/: required_facts.yaml  traceability.schema.json
softcopy/rules/: heuristics.yaml  registration_rules.yaml
softcopy/schemas/: application_fields.schema.json  feature_map.schema.json  manual_manifest.schema.json  ownership_evidence.schema.json  project_facts.schema.json
softcopy_tool/: __init__.py  cli.py  renderers.py  support.py  workflow.py
tests/: test_cli.py  test_renderers.py  test_support.py  test_workflow.py
(+55 files in other folders)
