[project]
name = "softcopy-codex-skill-pack"
version = "0.1.0"
description = "Codex skill pack and zero-dependency CLI for reviewable software copyright application materials."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "SoftCopy Contributors" }
]
dependencies = []

[project.optional-dependencies]
render = [
  "reportlab>=4",
  "python-docx>=1"
]

[project.scripts]
softcopy-tool = "softcopy_tool.cli:main"

[tool.pyright]
include = ["softcopy_tool"]
