[project]
name = "softcopy-codex-skill-pack"
version = "0.1.0"
description = "Codex skill pack and CLI for reviewable software copyright application materials."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "SoftCopy Contributors" }
]
dependencies = [
  "PyYAML>=6"
]

[project.optional-dependencies]
render = [
  "reportlab>=4",
  "python-docx>=1"
]

[project.scripts]
softcopy-tool = "softcopy_tool.cli:main"

[tool.setuptools]
packages = ["softcopy_tool"]
py-modules = ["softcopy_support"]

[tool.pyright]
include = ["softcopy_tool"]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"
